2013-07-02  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ThirdPartyToolbox/SphereUniformSamplingToolbox:
	* matlab/add_gerardus_paths.m: (0.1.5)

	- Uniform Sampling of a Sphere by Anton Semechko. 05 Jun 2012
	(Updated 23 May 2013). Downloaded from

	http://www.mathworks.co.uk/matlabcentral/fileexchange/37004-uniform-sampling-of-a-sphere

	- "The main function is titled 'ParticleSampleSphere' and allows
	you to create an approximately uniform triangular tessellation of
	the unit sphere by minimizing the generalized electrostatic
	potential energy (aka Reisz s-energy) of the system of charged
	particles. Effectively, this function produces a locally optimal
	solution to the problem of finding a minimum Reisz s-energy
	configuration of N equal charges (s=1 corresponds to the original
	Thomson problem)."

	* matlab/ManifoldToolbox/surface_tridomain.m: (0.2.0)

	- Add syntax [TRI, UV] = surface_tridomain('rect', ULIN, VLIN).

2013-07-01  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/surface_tridomain.m: (0.1.1)

	- Fix bug. Remove repeated points at lon=-180º and lon=180.

2013-06-27  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/dmatrix_sphmesh.m: (0.1.0)
	* matlab/test/test_dmatrix_sphmesh.m: (0.1.0)

	- DMATRIX_SPHMESH Sparse great-circle distance and shortest-path
	distance matrices between the nodes of a spherical mesh.

	* matlab/ManifoldToolbox/dmatrix_mesh.m: (0.1.1)

	- Fix bug. In each mesh facet, one edge was being forgotten, the
	one that links the last vertex in tri(i, :) to the first one.

2013-06-26  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ManifoldToolbox/surface_tridomain.m: (0.1.0)
	* Add matlab/test/test_surface_tridomain.m: (0.1.0)

	- SURFACE_TRIDOMAIN Triangular mesh to cover a planar or spherical
	domain.

	* matlab/PointsToolbox/surface_param.m: (0.3.0)
	* matlab/test/test_surface_param.m: (0.3.0)

	- Add 'sphproj' parametrization: Direct projection on unit sphere